Project Settings: Update gitignore to include cache, plugin, and module editor folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
 # project specific
-.leu
+Penguin Quest.zip
+
+/Builds/
+/Standalone Builds/
+/TBS_cache/
+/TPS_cache/
+
 /Assets/Plugins/crosstales
 /Assets/Editor Default Resources/crosstales
-/Build Versions*
-/Standalone Builds
-
-Penguin Quest.zip
-TPS_cache/
-Builds/
-
 
 # ----------
 # This .gitignore file should be placed at the root of your Unity project directory
