Add local-only plugin meta files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,11 @@ Penguin Quest.zip
 
 # plugin/module files to keep on local machine
 /Assets/Plugins/
+/Assets/Plugins.meta
 /Assets/Plugins/crosstales/
+/Assets/Plugins/crosstales.meta
+/Assets/Editor Default Resources
+/Assets/Editor Default Resources.meta
 /Assets/Editor Default Resources/crosstales/
 /Assets/Editor Default Resources/crosstales.meta
 /Assets/AssetStoreTools*
