--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,17 +1,18 @@
 {
   "dependencies": {
-    "com.unity.2d.animation": "3.2.3",
-    "com.unity.2d.ik": "2.0.2-preview.1",
-    "com.unity.2d.path": "2.0.5",
-    "com.unity.2d.pixel-perfect": "2.0.4",
-    "com.unity.2d.psdimporter": "2.1.4",
-    "com.unity.2d.spriteshape": "3.0.12",
+    "com.unity.2d.animation": "4.2.4",
+    "com.unity.2d.ik": "3.0.2-preview.1",
+    "com.unity.2d.path": "3.0.1",
+    "com.unity.2d.pixel-perfect": "3.0.2",
+    "com.unity.2d.psdimporter": "3.1.4",
+    "com.unity.2d.spriteshape": "4.1.2",
     "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.ide.visualstudio": "2.0.2",
     "com.unity.ide.vscode": "1.2.1",
     "com.unity.inputsystem": "1.0.0",
     "com.unity.test-framework": "1.1.14",
-    "com.unity.textmeshpro": "2.0.1",
-    "com.unity.timeline": "1.2.15",
+    "com.unity.textmeshpro": "3.0.0",
+    "com.unity.timeline": "1.3.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.vectorgraphics": "2.0.0-preview.12",
     "com.unity.modules.ai": "1.0.0",
