--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # ignore the general directory where all the external
 # folders/modules/packages/plugins/builtins are placed
 /Assets/ThirdParty/
+/Assets/2D Track Textures Bundle/
+/Assets/2D Track Textures Bundle.meta
 
 # build specific files
 Penguin Quest.zip
