--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,15 @@
 # ignore the general directory where all the external
 # folders/modules/packages/plugins/builtins are placed
 /Assets/ThirdParty/
+/Assets/snow/
+/Assets/snow.meta
+/Assets/2D Track Textures Bundle/
+/Assets/2D Track Textures Bundle.meta
 
 # build specific files
 Penguin Quest.zip
+/Assets/Samples/
+/Assets/Samples.meta
 /Builds/
 /TBS_cache/
 /TPS_cache/
