--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,8 +1,6 @@
 {
   "dependencies": {
-    "com.unity.2d.animation": "8.0.2",
-    "com.unity.2d.psdimporter": "7.0.1",
-    "com.unity.2d.spriteshape": "8.0.0",
+    "com.unity.feature.2d": "1.0.0",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.inputsystem": "1.4.1",
     "com.unity.postprocessing": "3.2.2",
