--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,8 +2,9 @@
   "dependencies": {
     "com.unity.feature.2d": "1.0.0",
     "com.unity.ide.visualstudio": "2.0.16",
-    "com.unity.inputsystem": "1.4.1",
+    "com.unity.inputsystem": "1.4.3",
     "com.unity.postprocessing": "3.2.2",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.1",
     "com.unity.ugui": "1.0.0",
