Refresh test assemblies

--- a/Assets/Tests/PlayMode/PlayModeTests.asmdef
+++ b/Assets/Tests/PlayMode/PlayModeTests.asmdef
@@ -1,11 +1,11 @@
 {
-    "name": "EditMode",
-    "optionalUnityReferences": [
-        "TestAssemblies"
+    "name": "PlayModeTests",
+    "rootNamespace": "",
+    "references": [
+        "UnityEngine.TestRunner",
+        "UnityEditor.TestRunner"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
