Adjust editmode test assembly name to match folder

--- a/Assets/Tests/EditMode/EditModeTests.asmdef
+++ b/Assets/Tests/EditMode/EditModeTests.asmdef
@@ -1,7 +1,9 @@
 {
-    "name": "EditMode",
-    "optionalUnityReferences": [
-        "TestAssemblies"
+    "name": "EditModeTests",
+    "rootNamespace": "",
+    "references": [
+        "UnityEngine.TestRunner",
+        "UnityEditor.TestRunner"
     ],
     "includePlatforms": [
         "Editor"
