Remove editor assembly reference for playmode tests

--- a/Assets/Tests/PlayMode/PlayModeTests.asmdef
+++ b/Assets/Tests/PlayMode/PlayModeTests.asmdef
@@ -2,8 +2,7 @@
     "name": "PlayModeTests",
     "rootNamespace": "",
     "references": [
-        "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner"
+        "UnityEngine.TestRunner"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
