--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.2d.psdimporter": "7.0.3",
     "com.unity.feature.2d": "1.0.0",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.inputsystem": "1.4.3",
