--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.addressables": "1.20.5",
     "com.unity.feature.2d": "1.0.0",
+    "com.unity.feature.gameplay-storytelling": "1.0.0",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.inputsystem": "1.4.4",
     "com.unity.profiling.core": "1.0.2",
