Exclude all platforms except editor, such that property drawers work

--- a/Assets/Code/Common/PQ.Common.asmdef
+++ b/Assets/Code/Common/PQ.Common.asmdef
@@ -6,7 +6,9 @@
         "Unity.TextMeshPro.Editor"
     ],
     "includePlatforms": [],
-    "excludePlatforms": [],
+    "excludePlatforms": [
+        "Editor"
+    ],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
