--- a/Assets/Code/Game/PQ.Game.asmdef
+++ b/Assets/Code/Game/PQ.Game.asmdef
@@ -8,7 +8,9 @@
         "Unity.InputSystem"
     ],
     "includePlatforms": [],
-    "excludePlatforms": [],
+    "excludePlatforms": [
+        "Editor"
+    ],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
