Remove editor from excluded platform list of common/game assemblies

--- a/Assets/Code/Common/PQ.Common.asmdef
+++ b/Assets/Code/Common/PQ.Common.asmdef
@@ -6,9 +6,7 @@
         "Unity.TextMeshPro.Editor"
     ],
     "includePlatforms": [],
-    "excludePlatforms": [
-        "Editor"
-    ],
+    "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
