--- a/Assets/Code/Game/PQ.Game.asmdef
+++ b/Assets/Code/Game/PQ.Game.asmdef
@@ -8,9 +8,7 @@
         "Unity.InputSystem"
     ],
     "includePlatforms": [],
-    "excludePlatforms": [
-        "Editor"
-    ],
+    "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
