--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,14 +1,15 @@
 {
   "dependencies": {
-    "com.unity.addressables": "1.20.5",
+    "com.unity.addressables": "1.21.1",
+    "com.unity.ai.navigation": "1.1.1",
     "com.unity.feature.2d": "1.0.0",
     "com.unity.feature.gameplay-storytelling": "1.0.0",
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.inputsystem": "1.4.4",
     "com.unity.profiling.core": "1.0.2",
-    "com.unity.recorder": "3.0.3",
-    "com.unity.render-pipelines.universal": "13.1.9",
-    "com.unity.splines": "1.0.1",
+    "com.unity.recorder": "4.0.0",
+    "com.unity.render-pipelines.universal": "14.0.4",
+    "com.unity.splines": "2.1.0",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.2",
