--- a/Assets/Code/Game/PQ.Game.asmdef
+++ b/Assets/Code/Game/PQ.Game.asmdef
@@ -5,7 +5,8 @@
         "PQ.Common",
         "Unity.TextMeshPro",
         "Unity.TextMeshPro.Editor",
-        "Unity.InputSystem"
+        "Unity.InputSystem",
+        "Cinemachine"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
