Circular Buffer - Implementation, usage, and tests (#214)
* First pass on circular buffer implementation

* Add class level notes to circular buffer

* Clean up redundant range checks

* Add note on allocations

* Bring over a copy of circular buffer from test scenes to common assembly

* make increment and decrement orders consistent with elsewhere

* Get parity between documentation for common containers

* Change verbiage for insertions

* Add inline remark to indexer

* Format extensions

* Use circular buffer to record positions

* Inline indexer code

* Fix off by one error

* Fix another off by one

* Cleanup comments and api

* Fix namespace

* Better distinguish between edit and play mode tests

* Stub out some test cases for circular buffer

* Use guids to allow easier renaming without breaking references in test assembly

* Include pq.common in editor test assembly

* Use guids, include pq.game, and editor/webgl/wind64 for playmode tests

* Stub out buffer initialization

* Use more narrow namespace scoping

* Ensure exception is thrown if capacity less than 1

* Rename empty case for clarity

* Parametize no capacity case

* Add new case for filling and emptying all

* IF DEF out scene template to avoid being included in playtests or builds

* Add convenience overload for constructor, and flesh out test cases

* Implement cycle through test logic

--- a/Assets/Tests/EditModeTests/EditModeTests.asmdef
+++ b/Assets/Tests/EditModeTests/EditModeTests.asmdef
@@ -2,8 +2,9 @@
     "name": "EditModeTests",
     "rootNamespace": "",
     "references": [
-        "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner"
+        "GUID:27619889b8ba8c24980f49ee34dbb44a",
+        "GUID:0acc523941302664db1f4e527237feb3",
+        "GUID:0d5cd1d560c56f44691d80e04f66daa4"
     ],
     "includePlatforms": [
         "Editor"
