--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,18 +1,18 @@
 {
   "dependencies": {
-    "com.unity.addressables": "1.21.19",
+    "com.unity.addressables": "1.21.20",
     "com.unity.feature.2d": "2.0.0",
     "com.unity.feature.gameplay-storytelling": "1.0.0",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.profiling.core": "1.0.2",
-    "com.unity.recorder": "4.0.1",
-    "com.unity.render-pipelines.universal": "15.0.7",
-    "com.unity.splines": "2.4.0",
+    "com.unity.recorder": "5.0.0",
+    "com.unity.render-pipelines.universal": "16.0.5",
+    "com.unity.splines": "2.5.2",
     "com.unity.test-framework": "1.3.9",
-    "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.8.6",
-    "com.unity.ugui": "1.0.0",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
