--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,19 +1,20 @@
 {
   "dependencies": {
     "com.unity.addressables": "2.7.4",
-    "com.unity.feature.2d": "2.0.1",
+    "com.unity.feature.2d": "2.0.2",
     "com.unity.feature.gameplay-storytelling": "1.0.0",
     "com.unity.ide.rider": "3.0.38",
     "com.unity.ide.visualstudio": "2.0.25",
-    "com.unity.inputsystem": "1.14.2",
+    "com.unity.inputsystem": "1.17.0",
     "com.unity.profiling.core": "1.0.3",
     "com.unity.recorder": "5.1.3",
-    "com.unity.render-pipelines.universal": "17.0.4",
+    "com.unity.render-pipelines.universal": "17.3.0",
     "com.unity.splines": "2.8.2",
     "com.unity.test-framework": "1.6.0",
     "com.unity.timeline": "1.8.9",
     "com.unity.ugui": "2.0.0",
     "com.unity.modules.accessibility": "1.0.0",
+    "com.unity.modules.adaptiveperformance": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
@@ -37,6 +38,7 @@
     "com.unity.modules.unitywebrequestaudio": "1.0.0",
     "com.unity.modules.unitywebrequesttexture": "1.0.0",
     "com.unity.modules.unitywebrequestwww": "1.0.0",
+    "com.unity.modules.vectorgraphics": "1.0.0",
     "com.unity.modules.wind": "1.0.0"
   }
 }
